--- a/Spore/Site.Master
+++ b/Spore/Site.Master
@@ -87,6 +87,33 @@
         
              </asp:ContentPlaceHolder>
 
+
+     <div class="footer">
+        <div class="container-fluid">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <p>Useful links</p>
+                        <ul>
+                            <li>Home</li>
+                            <li>About us</li>
+                            <li>Portfolio</li>
+                            <li>Contact</li>
+                        </ul>
+                        
+                    </div>
+                    <div class="col-md-4">
+
+                    </div>
+                    <div class="col-md-4">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     </form>
 </body>
 </html>
