--- a/Spore/Content/Style.css
+++ b/Spore/Content/Style.css
@@ -13,7 +13,6 @@
     margin: 0px;
 }
 
-
 /*Header*/
 
 @media screen and (max-width:700px){
@@ -235,5 +234,50 @@
 }
 
 .steps-main {
-    background-color: 
+    background-color: #353535;
+    color: #fff;
+    height: 500px;
+    padding: 25px; 
+}
+
+.steps-main h5 {
+    font-size: 28px;
+    text-transform: uppercase;
+}
+
+.steps-main p {
+    font-size: 16px;
+    margin-top: 30px;
+    color: #94b6df;
+}
+
+.divider-sm-white {
+    width: 30%;
+    height: 3px;
+    background-color: #94b6df;
+    margin-bottom: 20px;
+}
+
+.steps-section {
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+.steps-body h4 {
+    color: #353535;
+}
+
+.steps-section p {
+    color: #353535;
+}
+
+.steps-body {
+    background-color: #fff;
+    padding: 15px;
+}
+
+@media screen and (max-width: 767px){
+    .steps-main {
+        height: 1200px;
+    }
 }
