--- a/Spore/Content/Style.css
+++ b/Spore/Content/Style.css
@@ -118,9 +118,8 @@
  }
 
 .btn-learnmore:hover {
-    color: #94b6df;
+    color: #fff;
     text-decoration: none;
-    box-shadow: #fff 1px 1px 3px inset;
 }
 
 .divider-white {
@@ -236,7 +235,6 @@
 .steps-main {
     background-color: #353535;
     color: #fff;
-    height: 500px;
     padding: 25px; 
 }
 
@@ -263,6 +261,11 @@
     margin-top: 10px;
 }
 
+.steps-body {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
 .steps-body h4 {
     color: #353535;
 }
@@ -276,8 +279,8 @@
     padding: 15px;
 }
 
-@media screen and (max-width: 767px){
-    .steps-main {
-        height: 1200px;
+    /*.steps-main .col-xs-12 {
+        text-align: center;
+        width: 350px;
     }
-}
+ }*/
