--- a/Spore/Content/Style.css
+++ b/Spore/Content/Style.css
@@ -27,11 +27,14 @@
 
 /*Header*/
 
-@media screen and (max-width:700px){
-    .header col-md-4 {
-        float: none !important;
+@media screen and (max-width:768px){
+    .header p {
+        visibility: hidden;
+        height: 10px;
     }
 }
+
+
 
 .header {
     background-color: #353535;
@@ -255,10 +258,25 @@
     font-size: 16px;
 }
 
-.footer {
+.footer-upper {
     background-color: #353535;
+    font-size: 36px;
+}
+
+.footer-upper i {    
     color: #808080;
 }
+
+.footer-upper p {
+    color: #fff;
+    font-size: 32px;
+    padding: 10px;
+}
+
+.footer-upper .col-md-6 {
+    padding: 25px;
+}
+
 
 .steps-main {
     background-color: #353535;
@@ -291,6 +309,7 @@
 
 .steps-section {
     border-radius: 10px;
+    max-height: 500px;
 }
 
 .steps-body {
@@ -322,5 +341,14 @@
         text-align: center;
         vertical-align: middle;
     }
+}
 
+@media screen and (max-width: 975px){
+    .icon-area {
+        visibility: collapse;
+        height: 1px;
+    }
+    .steps-section {
+        margin-top: 10px;
+    }
 }
