--- a/Spore/Site.Master
+++ b/Spore/Site.Master
@@ -88,25 +88,15 @@
              </asp:ContentPlaceHolder>
 
 
-     <div class="footer">
+     <div class="footer-upper">
         <div class="container-fluid">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
-                        <p>Useful links</p>
-                        <ul>
-                            <li>Home</li>
-                            <li>About us</li>
-                            <li>Portfolio</li>
-                            <li>Contact</li>
-                        </ul>
-                        
-                    </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6">
 
                     </div>
-                    <div class="col-md-4">
-
+                    <div class="col-md-6">
+                        <p><i class="glyphicon glyphicon-map-marker"></i> Request a free quote</p>
                     </div>
                 </div>
             </div>
