--- a/Spore/Site.Master
+++ b/Spore/Site.Master
@@ -92,14 +92,22 @@
         <div class="container-fluid">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-12">
+                        <p><i class="glyphicon glyphicon-envelope"></i> Contact@Spore.com</p>
 
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-12">
                         <p><i class="glyphicon glyphicon-map-marker"></i> Request a free quote</p>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+
+    <div class="footer-lower">
+        <div class="container-fluid">
+
         </div>
     </div>
 
