--- a/Spore/Site.Master
+++ b/Spore/Site.Master
@@ -110,7 +110,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        
+                        <img class="img-responsive" src="Images/panda_3.jpg" />
                     </div>
                     <div class="col-md-4">
                         <p>Useful links</p>
