--- a/Spore/Site.Master
+++ b/Spore/Site.Master
@@ -13,7 +13,7 @@
     </asp:PlaceHolder>
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="Content/Style.css" rel="stylesheet" />
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="Images/favicon_panda.png" rel="shortcut icon" type="image/x-icon" />
 
 </head>
 <body>
@@ -50,7 +50,7 @@
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-12">
                         <div class="pull-right">
-                            <p><i class="glyphicon glyphicon-envelope"></i> Contact@Panda-WebDesign.co.uk</p>
+                            <p><i class="glyphicon glyphicon-envelope"></i> contact@panda-webdesign.co.uk</p>
                         </div>
                     </div>
                 </div>
@@ -68,16 +68,16 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">
+                    <a class="navbar-brand" runat="server" href="/Home.aspx">
                         <img class="img-responsive" src="Images/panda_final.jpg" />
                     </a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="#">Projects</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a href="/Home.aspx">Home</a></li>
+                        <li><a href="/About.aspx">About</a></li>
+                        <li><a href="/Projects.aspx">Projects</a></li>
+                        <li><a href="/Contact.aspx">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -93,8 +93,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-sm-12">
-                        <p><i class="glyphicon glyphicon-envelope"></i> Contact@Panda-WebDesign.co.uk</p>
-
+                        <p><i class="glyphicon glyphicon-envelope"></i> contact@panda-webdesign.co.uk</p>
                     </div>
                     <div class="col-md-6 col-sm-12">
                         <p><i class="glyphicon glyphicon-map-marker"></i> Request a free quote</p>
@@ -109,22 +108,23 @@
         <div class="container-fluid">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-sm-4">
                         <img class="img-responsive" src="Images/panda_3.jpg" />
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-4">
                         <p>Useful links</p>
                         <ul class="useful-links-ul">
-                            <li>Home</li>
-                            <li>About</li>
-                            <li>Portfolio</li>
-                            <li>Contact</li>
+                            <li><a href="/Home.aspx">Home</a></li>
+                            <li><a href="/About.aspx">About</a></li>
+                            <li><a href="/Projects.aspx">Projects</a></li>
+                            <li><a href="/Contact.aspx">Contact</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-4">
                         <p>Get in touch</p>
                         <p><span class="grey-text">Feel free to ask a question.</span></p>
-                        <input class="form-control" id="inputEmail"  type="text" placeholder="enter email" />
+                        <p><span class="grey-text">We will provide all quotes and prospect designs, free of charge.</span></p>
+                       
                     </div>
                 </div>
             </div>
