--- a/Spore/Site.Master
+++ b/Spore/Site.Master
@@ -43,7 +43,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-sm-4 col-xs-12">
-                        <p><i class="glyphicon glyphicon-home"></i> Telford - Website Design</p>
+                        <p class="mobile-visible"><i class="glyphicon glyphicon-home"></i> Telford - Website Design</p>
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-12 align-center">
                         <p><i class="glyphicon glyphicon-ok"></i> Full Support &amp; Maintenance</p>
@@ -68,13 +68,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="/Home.aspx">
+                    <a class="navbar-brand" runat="server" href="/Default.aspx">
                         <img class="img-responsive" src="Images/panda_final.jpg" />
                     </a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/Home.aspx">Home</a></li>
+                        <li><a href="/Default.aspx">Home</a></li>
                         <li><a href="/About.aspx">About</a></li>
                         <li><a href="/Projects.aspx">Projects</a></li>
                         <li><a href="/Contact.aspx">Contact</a></li>
@@ -114,7 +114,7 @@
                     <div class="col-sm-4">
                         <p>Useful links</p>
                         <ul class="useful-links-ul">
-                            <li><a href="/Home.aspx">Home</a></li>
+                            <li><a href="/Default.aspx">Home</a></li>
                             <li><a href="/About.aspx">About</a></li>
                             <li><a href="/Projects.aspx">Projects</a></li>
                             <li><a href="/Contact.aspx">Contact</a></li>
